force-app/main/default/objects/IF_Monitoring__c/IF_Monitoring__c.object-meta.xml
<CustomObject>
    <description>IF_Monitoring</description>
    <label>IF_Monitoring</label>
    <nameField>
        <displayFormat>E-{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>IF_Monitoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IF_Monitorings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>