force-app/main/default/objects/IF_Monitoring__c/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <description>Interface 관련한 Apex의 Class 내 Method 정보</description>
    <inlineHelpText>Interface 관련한 Apex의 Class 내 Method 정보</inlineHelpText>
    <label>ApexMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>