force-app/main/default/objects/IF_Monitoring__c/fields/ApexName__c.field-meta.xml
<CustomField>
    <fullName>ApexName__c</fullName>
    <description>Interface 관련한 Apex의 Class Name 정보</description>
    <inlineHelpText>Interface 관련한 Apex의 Class Name 정보</inlineHelpText>
    <label>ApexName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>