force-app/main/default/objects/IF_Monitoring__c/fields/EndDatetime__c.field-meta.xml
<CustomField>
    <fullName>EndDatetime__c</fullName>
    <label>EndDatetime</label>
    <type>DateTime</type>
</CustomField>