force-app/main/default/objects/IF_Monitoring__c/fields/IF_Log__c.field-meta.xml
<CustomField>
    <fullName>IF_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IF_Log</label>
    <referenceTo>IF_Log__c</referenceTo>
    <relationshipLabel>IF_Monitorings</relationshipLabel>
    <relationshipName>IF_Monitorings</relationshipName>
    <type>Lookup</type>
</CustomField>