force-app/main/default/objects/IF_Monitoring__c/fields/isIncident__c.field-meta.xml
<CustomField>
    <fullName>isIncident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIncident</label>
    <type>Checkbox</type>
</CustomField>