force-app/main/default/objects/IF_Monitoring__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>조치 방안+상세 정보</description>
    <inlineHelpText>조치 방안+상세 정보</inlineHelpText>
    <label>Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>