force-app/main/default/objects/IF_Monitoring__c/fields/StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>StartDatetime__c</fullName>
    <label>StartDatetime</label>
    <type>DateTime</type>
</CustomField>