force-app/main/default/objects/IF_Monitoring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogType__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>StartDatetime__c</columns>
    <columns>EndDatetime__c</columns>
    <columns>ApexMethod__c</columns>
    <columns>ApexName__c</columns>
    <columns>Solution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>