force-app/main/default/objects/IF_Monitoring__c/listViews/TODAY_LIST.listView-meta.xml
<ListView>
    <fullName>TODAY_LIST</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>InterfaceId__c</columns>
    <columns>StartDatetime__c</columns>
    <columns>EndDatetime__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>ApexName__c</columns>
    <columns>ApexMethod__c</columns>
    <columns>Solution__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY_LIST</label>
</ListView>